RTL - desktop view - fix useless margin of page container for sidebard collapsing

--- a/resources/sass/rtl.scss
+++ b/resources/sass/rtl.scss
@@ -112,3 +112,14 @@ button.close {
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
     float: left !important;
 }
+
+
+@media screen and (max-width: 1439px) and (min-width: 992px){
+    .page-container{
+        padding-left: 0px;
+        padding-right: 70px;
+    }
+    .is-collapsed .page-container {
+        padding-right: 280px;
+    }
+}
